tests/NormalTests/paczka2/big_fuzzy/87604096.err
Error in line 5: xOfmYemkge S96 65,1
Error in line 15: j8D1VPj8 S96 32,3
Error in line 21: CCSxu9vCxG9 A450 16,5
Error in line 16: QTcG8zybQ A562 248,4
Error in line 35: dy241o0YIk S96 25,0
Error in line 34: A450 A195 20,0
Error in line 30: xOfmYemkge A450 75,7
Error in line 50: xOfmYemkge S96 0,3
Error in line 52: xOfmYemkge A195 49,1
Error in line 49: A450 A195 94,1
Error in line 61: xOfmYemkge S96 43,8
Error in line 70: xOfmYemkge A195 2,6
Error in line 80: xOfmYemkge S96 -5,1
Error in line 79: eMGr A562 80,9
Error in line 67: A450 S96 85,3
Error in line 75: xOfmYemkge S96 81,8
Error in line 92: CCSxu9vCxG9 A56 39,
Error in line 96: QTcG8zybQ A450 98,80
Error in line 88: xOfmYemkge A450 93,0
Error in line 95: QTcG8zybQ A450 97,6
Error in line 76: CCSxu9vCxG9 A195 8,4
Error in line 101: QTcG8zybQ A195 99,8
Error in line 102: CCSxu9vCxG9 A562 112,1
Error in line 110: CCSxu9vCxG9 A450 22,5
Error in line 119: CCSxu9vCxG9 A562 93,7
Error in line 123: j8D1VPj8 A195 11,4
Error in line 125: A450 A450 29,4
Error in line 132: A450 A195 335,7
Error in line 141: j8D1VPj8 A450 87,2
Error in line 136: A450 A562 28,9
Error in line 150: dy241o0YIk S96 63,6
Error in line 151: CCSxu9vCxG9 A195 96,4
Error in line 149: j8D1VPj8 A562 15,6
Error in line 165: xOfmYemkge A562 154,15
Error in line 167: dy241o0YIk A450 25,3
Error in line 168: dy241o0YIk A195 99,4
Error in line 185: CCSxu9vCxG9 A450 59,84
Error in line 188: QTcG8zybQ A195 45,36
Error in line 161: xOfmYemkge A562 59,2
Error in line 194: QTcG8zybQ A195 21,7
Error in line 192: eMGr A562 36,3
Error in line 198: eMGr A195 52,7
Error in line 197: QTcG8zybQ A562 34,0
Error in line 201: eMGr A450 25,5
Error in line 209: A450 A562 43,5
Error in line 213: A450 A195 4,5
Error in line 216: QTcG8zybQ A562 95,3
Error in line 200: dy241o0YIk A562 48,7
Error in line 211: j8D1VPj8 A450 11,5
Error in line 230: eMGr A195 60,2
Error in line 227: CCSxu9vCxG9 S96 18,5
Error in line 233: eMGr A450 3,4
Error in line 235: CCSxu9vCxG9 A450 303,9
Error in line 237: eMGr S96 22,2
